@@ -1,0 +1,12 @@
+from django.db import models
+
+from mptt.models import treeify
+
+class Genre(models.Model):
+    name = models.CharField(max_length=50, unique=True)
+    parent = models.ForeignKey('self', null=True, blank=True, related_name='children')
+
+    def __unicode__(self):
+        return self.name
+
+treeify(Genre)
